# usbutler

./: .env.example  .env.secrets.example  .gitignore  README.md  c-pscs.py  check.py  d-pscs.py  docker-compose.yml  g-pscs.py  se.py  users.json
delta/: app.py  pyproject.toml  pytest.ini
delta/database/: __init__.py  json_db.py
delta/routers/: __init__.py  doors.py  identifiers.py  user_identifiers.py  users.py
delta/schemas/: __init__.py  door.py  identifier.py  user.py
delta/services/: __init__.py  door_service.py  identifier_service.py  user_service.py
delta/tests/: conftest.py  test_api.py  test_database.py  test_services.py
scripts/: pscs.py  (+1 more)
usbutler/: .dockerignore  Dockerfile  pyproject.toml  supervisord-web.conf  supervisord.conf  test_gpio.py
usbutler/app/: __init__.py  cli.py  config.py  database.py  dependencies.py  main.py
usbutler/app/emv/: emv_parser.py  nfc_reader.py
usbutler/app/models/: __init__.py  door.py  door_event.py  identifier.py  user.py
usbutler/app/routers/: __init__.py  doors.py  identifiers.py  pos.py  public.py  ui.py  users.py
usbutler/app/schemas/: __init__.py  door.py  identifier.py  user.py
usbutler/app/services/: __init__.py  api_token_service.py  auth_service.py  card_reader.py  card_reader_polling.py  door_config_service.py  door_control_service.py  door_event_service.py  door_service.py  emv_service.py  identifier_service.py  notification_service.py  reader_control.py  user_service.py
usbutler/app/templates/: base.html  doors.html  index.html  login.html
usbutler/scripts/: reconnect_reader.sh  udev_monitor.sh
usbutler/tests/: conftest.py  test_api_token_service.py  test_auth.py  test_ip_restriction.py  test_nfc_reader.py  test_services.py  test_user_service.py  test_web.py
(+27 files in other folders)
