[project]
name = "usbutler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyscard>=2.0.0",
    "flask>=3.0.0",
    "gpiod>=2.0.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]
