[project]
name = "usbutler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyscard>=2.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.4",
    "gpiod>=2.0.0",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.45",
    "python-multipart>=0.0.21",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
]
